msg: Inline disabling select-on-focus for labels and simplify comment

The original comment was really verbose and contained a FIXME added by
me which can be removed because TRUE is still the default setting for
gtk-label-select-on-focus in GTK4.

It isn't really necessary either for an extra function call just for one
g_object_set() call, and it wasn't being called when a msg dialog was
called without --text='...' which (somewhat oddly) has been valid in
zenity forever.

Also, there was no need to get the settings object for any specific
widget - gtk_settings_get_default() works fine.

See: https://bugzilla.gnome.org/show_bug.cgi?id=734196 for the original
bug report for additional context.

I can't really reproduce this issue on either zenity3 or zenity4, but it
doesn't really hurt to keep this code in either. While tabbing through
the widgets, one's primary selection could still be nuked, which I could
see being annoying in any event.